@@ -37,5 +37,43 @@ module ElasticAPM
       expect(destination.resource).to eq 'sqlite'
       expect(destination.type).to eq 'db'
     end
+
+    it 'captures rows_affected for update and delete operations', :intercept do
+      db =
+        if RUBY_PLATFORM == 'java'
+          ::Sequel.connect('jdbc:sqlite::memory:')
+        else
+          ::Sequel.sqlite # in-memory
+        end
+
+      db.create_table :customers do
+        primary_key :id
+        String :name
+      end
+
+      with_agent do
+        ElasticAPM.with_transaction 'Sequel rows_affected test INSERT' do
+          3.times do |i|
+            db[:customers].insert(name: "customer_#{i}")
+          end
+        end
+
+        spans = @intercepted.spans
+        expect(spans.all? { |s| s.context.db.rows_affected.nil? }).to eq(true)
+
+        ElasticAPM.with_transaction 'Sequel rows_affected test UPDATE' do
+          db[:customers].where(name: 'customer_0').update(name: 'customer_zero')
+        end
+
+        span = @intercepted.spans.last
+        expect(span.context.db.rows_affected).to eq(1)
+
+        ElasticAPM.with_transaction 'Sequel rows_affected test DELETE' do
+          db[:customers].delete
+        end
+        span = @intercepted.spans.last
+        expect(span.context.db.rows_affected).to eq(3)
+      end
+    end
   end
 end
